# libkinguard

./: .gitignore  BackupManager.cpp  BackupManager.h  BaseManager.cpp  BaseManager.h  CMakeLists.txt  Config.h.in  IdentityManager.cpp  IdentityManager.h  MailManager.cpp  MailManager.h  NetworkManager.cpp  NetworkManager.h  README.md  StorageConfig.cpp  StorageConfig.h  StorageDevice.cpp  StorageDevice.h  StorageManager.cpp  StorageManager.h  SystemManager.cpp  SystemManager.h  UserManager.cpp  UserManager.h  libkinguard.pc.in
debian/: README  changelog  control  copyright  rules  shlibs.local.ex
test/: CMakeLists.txt  TestStorageConfig.cpp  TestStorageConfig.h  TestStorageDevice.cpp  TestStorageDevice.h
